p2/confs/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-three
  sessionAffinity: None
